# openbb-danglewood

./: .gitignore
providers/yfinance/: README.md  hatch_build.py  pyproject.toml
providers/yfinance/openbb_yfinance/: __init__.py  yfinance_router.py
providers/yfinance/openbb_yfinance/assets/: apps.json  asset_info.css  asset_info_bridge.js  asset_info_live.js  screener_builder.css  screener_builder.js  screener_cache.json.xz  tvchart_bridge_register.js  tvchart_marquee.css
providers/yfinance/openbb_yfinance/models/: active.py  aggressive_small_caps.py  analyst_recommendations.py  available_indices.py  balance_sheet.py  calendar_earnings.py  calendar_ipo.py  calendar_splits.py  cash_flow.py  company_calendar.py  company_filings.py  company_news.py  crypto_historical.py  currency_historical.py  earnings_estimates.py  economic_calendar.py  eps_revisions.py  eps_trend.py  equity_historical.py  equity_profile.py  equity_quote.py  equity_screener.py  etf_info.py  fund_allocation.py  fund_historical.py  fund_holdings.py  fund_info.py  fund_performance.py  fund_ratings.py  fund_risk.py  futures_curve.py  futures_historical.py  gainers.py  growth_estimates.py  growth_tech_equities.py  historical_dividends.py  historical_eps.py  income_statement.py  index_historical.py  industry_overview.py  (+25 more)
providers/yfinance/openbb_yfinance/routers/: __init__.py  crypto.py  currency.py  derivatives.py  economy.py  equity.py  estimates.py  etf.py  funds.py  index.py  industry.py  news.py  ownership.py  sectors.py
providers/yfinance/openbb_yfinance/utils/: apps.py  asset_info.py  funds_helpers.py  helpers.py  mcp_app.py  news_helpers.py  pywry_server.py  references.py  screener_cache.py  screener_catalog.py  screener_extra_fields.py  screener_iframe.py  screener_native.py  screener_presets.py  search_helpers.py  sectors.py  tvchart_datafeed.py  tvchart_native.py
providers/yfinance/openbb_yfinance/utils/options/: __init__.py  create_smile.py  create_stats.py  create_surface.py  create_term_structure.py  data_handler.py
providers/yfinance/openbb_yfinance/utils/presets/: _template.ini  aggressive_small_cap.ini  gainers.ini  growth_tech.ini  large_cap_value.ini  losers.ini  most_active.ini  technology_growth.ini  top_etfs.ini  undervalued_growth.ini  undervalued_large_cap.ini
providers/yfinance/scripts/: bootstrap.sh
providers/yfinance/tests/: conftest.py  test_yfinance_fetchers.py  test_yfinance_helpers.py  test_yfinance_mcp.py  test_yfinance_options.py  test_yfinance_registration.py  test_yfinance_tvchart.py
providers/yfinance/tests/data/: options_aapl.json
providers/yfinance/tests/record/curl/test_yfinance_fetchers/: test_y_finance_analyst_recommendations_fetcher_curl.yaml  test_y_finance_calendar_earnings_fetcher_curl.yaml  test_y_finance_calendar_ipo_fetcher_curl.yaml  test_y_finance_calendar_splits_fetcher_curl.yaml  test_y_finance_company_calendar_fetcher_curl.yaml  test_y_finance_company_filings_fetcher_curl.yaml  test_y_finance_earnings_estimates_fetcher_curl.yaml  test_y_finance_economic_calendar_fetcher_curl.yaml  test_y_finance_eps_revisions_fetcher_curl.yaml  test_y_finance_eps_trend_fetcher_curl.yaml  test_y_finance_equity_screener_etf_metadata_fetcher_curl.yaml  test_y_finance_equity_screener_fetcher_curl.yaml  test_y_finance_equity_screener_predefined_fetcher_curl.yaml  test_y_finance_equity_screener_preset_fetcher_curl.yaml  test_y_finance_fund_historical_fetcher_curl.yaml  test_y_finance_fund_holdings_fetcher_curl.yaml  test_y_finance_fund_info_fetcher_curl.yaml  test_y_finance_fund_performance_fetcher_curl.yaml  test_y_finance_fund_ratings_fetcher_curl.yaml  test_y_finance_fund_risk_fetcher_curl.yaml  test_y_finance_futures_curve_fetcher_curl.yaml  test_y_finance_growth_estimates_fetcher_curl.yaml  test_y_finance_historical_eps_fetcher_curl.yaml  test_y_finance_industry_overview_fetcher_curl.yaml  test_y_finance_industry_top_performing_fetcher_curl.yaml  test_y_finance_insider_purchases_fetcher_curl.yaml  test_y_finance_insider_roster_fetcher_curl.yaml  test_y_finance_insider_trading_fetcher_curl.yaml  test_y_finance_institutional_holders_fetcher_curl.yaml  test_y_finance_major_holders_fetcher_curl.yaml  test_y_finance_news_fetcher_curl.yaml  test_y_finance_price_target_fetcher_curl.yaml  (+7 more)
(+2 files in other folders)
